# Programming-Language

./: README.md
Image Rotation/: CMakeLists.txt
Image Rotation/include/: bitmap.h  file.h  image.h  matrix_converter.h  rotator.h  validator.h
Image Rotation/src/: file.c  image.c  main.c  rotator.c  validator.c
